[gd_scene load_steps=19 format=3 uid="uid://dua5bmnthjes2"]

[ext_resource type="Texture2D" uid="uid://cm5cr862bja8k" path="res://Assets/UI/bg.png" id="1_c45b8"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_nkahe"]
[ext_resource type="Texture2D" uid="uid://bu88ao2njgqk6" path="res://Assets/UI/logo.png" id="2_becd8"]
[ext_resource type="Texture2D" uid="uid://dh7iste30hjsm" path="res://Assets/UI/play_button.png" id="3_r5x2j"]
[ext_resource type="Texture2D" uid="uid://ca484b6nsjvwr" path="res://Assets/Emoji/Rolling on the Floor Laughing.png" id="4_jpqfe"]
[ext_resource type="Texture2D" uid="uid://ufhjhwb0knte" path="res://Assets/Emoji/Smiling Face with Sunglasses.png" id="5_y2ph4"]
[ext_resource type="FontFile" uid="uid://8ixav2iipfgb" path="res://Assets/Fonts/ArimaKoshi-Regular.otf" id="7_t6hmc"]
[ext_resource type="Shader" path="res://Scripts/shaders/transition.gdshader" id="8_1rmow"]
[ext_resource type="PackedScene" uid="uid://csot8matbu6s" path="res://Scenes/progress_bar.tscn" id="9_6mrc4"]
[ext_resource type="PackedScene" uid="uid://ynpouyser6kn" path="res://Scenes/Game.tscn" id="10_cjmon"]
[ext_resource type="AudioStream" uid="uid://50hqvj5f2g63" path="res://Assets/Music/Sakura-Girl-Lucky-Day-chosic.com_.mp3" id="11_dkx7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31p2n"]

[sub_resource type="Animation" id="Animation_ng1hb"]
resource_name = "Menu"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 0.659754),
"update": 0,
"values": [Vector2(481, 171), Vector2(580, 189)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(29.5, 100), Vector2(-20, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("emoji1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1.56917, 0.5),
"update": 0,
"values": [Vector2(16, 233), Vector2(16, 217)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("emoji2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.5, 2.63902),
"update": 0,
"values": [0.261799, -0.261799]
}

[sub_resource type="Animation" id="Animation_y000m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(481, 171)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(29.5, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("emoji1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 217)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("emoji2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("fade:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fade:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_efm1v"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_le4fh"]
_data = {
"Menu": SubResource("Animation_ng1hb"),
"RESET": SubResource("Animation_y000m"),
"fade": SubResource("Animation_efm1v")
}

[sub_resource type="LabelSettings" id="LabelSettings_bpphs"]
font = ExtResource("7_t6hmc")
font_size = 24
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.196078)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p0576"]
shader = ExtResource("8_1rmow")
shader_parameter/progress = 0.0
shader_parameter/bg_color = Color(0, 0, 0, 0)
shader_parameter/wave_1_color = Color(1, 1, 1, 1)
shader_parameter/wave_2_color = Color(0.998773, 0.404395, 0.607851, 1)
shader_parameter/wave_1_speed = -1.0
shader_parameter/wave_2_speed = 1.0

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkahe")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c45b8")
metadata/_edit_lock_ = true

[node name="Logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(481, 171)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 29.5
offset_top = 100.0
offset_right = 510.5
offset_bottom = 271.0
grow_horizontal = 2
texture = ExtResource("2_becd8")
expand_mode = 3
stretch_mode = 5

[node name="play_btn" type="Button" parent="."]
custom_minimum_size = Vector2(120, 74)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -38.0
offset_right = 139.5
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_31p2n")
flat = true

[node name="TextureRect" type="TextureRect" parent="play_btn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r5x2j")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="emoji1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.27
anchor_right = 0.109
anchor_bottom = 0.27
offset_left = 16.0
offset_top = 217.0
offset_right = 96.0
offset_bottom = 297.01
texture = ExtResource("4_jpqfe")
expand_mode = 1

[node name="emoji2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.697
anchor_top = 0.607
anchor_right = 0.697
anchor_bottom = 0.607
offset_left = -40.38
offset_top = -40.72
offset_right = 41.62
offset_bottom = 41.28
rotation = 0.261799
pivot_offset = Vector2(41, 41)
texture = ExtResource("5_y2ph4")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_le4fh")
}

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Kc Tech Studios"
label_settings = SubResource("LabelSettings_bpphs")

[node name="transition" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_p0576")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="loading bar" parent="." instance=ExtResource("9_6mrc4")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -18.5
offset_right = 135.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
scene_to_change = ExtResource("10_cjmon")

[node name="fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_dkx7s")
autoplay = true

[connection signal="pressed" from="play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="bg_music" to="." method="_on_bg_music_finished"]
